<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright © messageconcept software GmbH, Cologne, Germany.
  ~ All rights reserved. This program and the accompanying materials
  ~ are made available under the terms of the GNU Public License v3.0
  ~ which accompanies this distribution, and is available at
  ~ http://www.gnu.org/licenses/gpl.html
  -->
<restrictions xmlns:android="http://schemas.android.com/apk/res/android">

    <!--
    Refer to the javadoc of RestrictionsManager for detail of this file.
    https://developer.android.com/reference/android/content/RestrictionsManager.html
    -->

    <!-- global restrictions -->
    <restriction
        android:description="@string/login_base_url_description"
        android:key="login_base_url"
        android:restrictionType="string"
        android:title="@string/login_base_url_title"/>

    <restriction
        android:description="@string/login_user_name_description"
        android:key="login_user_name"
        android:restrictionType="string"
        android:title="@string/login_user_name_title"/>

    <restriction
        android:key="login_password"
        android:restrictionType="string"
        android:title="@string/login_password_title"/>

    <restriction
        android:defaultValue="-1"
        android:key="proxy_type"
        android:restrictionType="integer"
        android:title="@string/proxy_type_title"/>

    <restriction
        android:key="proxy_host"
        android:restrictionType="string"
        android:title="@string/proxy_host_title"/>

    <restriction
        android:defaultValue="9050"
        android:key="proxy_port"
        android:restrictionType="integer"
        android:title="@string/proxy_port_title"/>

    <restriction
        android:defaultValue="false"
        android:key="distrust_system_certs"
        android:restrictionType="bool"
        android:title="@string/distrust_system_certs_title"/>

    <restriction
        android:defaultValue="14400"
        android:key="default_sync_interval"
        android:restrictionType="integer"
        android:title="@string/default_sync_interval"/>

    <!-- per account restrictions -->
    <restriction
        android:defaultValue="false"
        android:key="wifi_only"
        android:restrictionType="bool"
        android:title="@string/wifi_only_title"/>

    <restriction
        android:key="wifi_only_ssids"
        android:restrictionType="string"
        android:title="@string/wifi_only_ssids_title"/>

</restrictions>
